--- a/AFKnights/www/package.json
+++ b/AFKnights/www/package.json
@@ -33,8 +33,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "firebase": "^4.8.0",
     "phaser": "^3.21.0",
-    "phaser-animated-tiles": "^2.0.2",
-    "firebase": "^5.0.3"
+    "phaser-animated-tiles": "^2.0.2"
   }
 }
