--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "phaser3-project-template",
+  "name": "rpg_phaser",
   "version": "1.1.0",
-  "description": "A Phaser 3 Project Template",
+  "description": "A Phaser 3 RPG",
+  "engines": {
+    "node": "12.13.0"
+  },
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
