--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "devDependencies": {
