--- a/package.json
+++ b/package.json
@@ -1,43 +1,33 @@
 {
-  "name": "rpg_phaser",
-  "version": "1.1.0",
-  "description": "A Phaser 3 RPG",
-  "engines": {
-    "node": "12.13.0"
-  },
+  "name": "client",
+  "version": "1.0.0",
+  "description": "Client side code for zenva mmorpg",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --display-modules",
-    "buildlog": "webpack --json --profile > webpack.build-log.json",
-    "buildsprite": "webpack --config webpack.config-sprite.js --display-modules",
-    "buildspritelog": "webpack --config webpack.config-sprite.js --json --profile > webpack.build-sprite-log.json",
-    "buildboth": "webpack --config webpack.config-both.js --display-modules",
-    "buildbothlog": "webpack --config webpack.config-both.js --json --profile > webpack.build-both-log.json",
-    "buildspritesmall": "webpack --config webpack.config-sprite-small-loader.js --display-modules",
-    "buildspritesmalllog": "webpack --config webpack.config-sprite-small-loader.js --json --profile > webpack.build-sprite-small-loader-log.json",
-    "buildfull": "webpack --config webpack.config-full.js --display-modules",
-    "buildfulllog": "webpack --config webpack.config-full.js --json --profile > webpack.build-full-log.json",
-    "buildcore": "webpack --config webpack.config-core.js --display-modules",
-    "buildcorelog": "webpack --config webpack.config-core.js --json --profile > webpack.build-core-log.json",
-    "start": "webpack-dev-server --config webpack/base.js --open"
+    "build": "npx webpack --mode production",
+    "start": "npm run build && npx webpack-dev-server --port=8000 --mode development",
+    "lint": "npx eslint src/ --fix",
+    "bundle": "./bundle.sh"
   },
+  "author": "Scott Westover",
+  "license": "ISC",
   "devDependencies": {
-    "serialize-javascript": ">=2.1.1",
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "dotenv": "^8.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "raw-loader": "^3.1.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "firebase": "^7.5.1",
-    "phaser": "^3.20.1"
+    "phaser": "^3.18.1",
+    "socket.io-client": "^2.2.0",
+    "uuid": "^3.3.2",
+    "firebase": "^7.5.1"
   }
 }
