--- a/package.json
+++ b/package.json
@@ -1,53 +1,38 @@
 {
-  "name": "rpg_phaser",
-  "version": "1.1.0",
-  "description": "A Phaser 3 RPG",
-  "engines": {
-    "node": "12.13.0"
-  },
+  "name": "phaser3-project-template",
+  "version": "1.1.2",
+  "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --display-modules",
-    "buildlog": "webpack --json --profile > webpack.build-log.json",
-    "buildsprite": "webpack --config webpack.config-sprite.js --display-modules",
-    "buildspritelog": "webpack --config webpack.config-sprite.js --json --profile > webpack.build-sprite-log.json",
-    "buildboth": "webpack --config webpack.config-both.js --display-modules",
-    "buildbothlog": "webpack --config webpack.config-both.js --json --profile > webpack.build-both-log.json",
-    "buildspritesmall": "webpack --config webpack.config-sprite-small-loader.js --display-modules",
-    "buildspritesmalllog": "webpack --config webpack.config-sprite-small-loader.js --json --profile > webpack.build-sprite-small-loader-log.json",
-    "buildfull": "webpack --config webpack.config-full.js --display-modules",
-    "buildfulllog": "webpack --config webpack.config-full.js --json --profile > webpack.build-full-log.json",
-    "buildcore": "webpack --config webpack.config-core.js --display-modules",
-    "buildcorelog": "webpack --config webpack.config-core.js --json --profile > webpack.build-core-log.json",
+    "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/photonstorm/phaser3-project-template.git"
+  },
+  "author": "Richard Davey <rdavey@gmail.com> (http://www.photonstorm.com)",
+  "license": "MIT",
+  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
+  "bugs": {
+    "url": "https://github.com/photonstorm/phaser3-project-template/issues"
+  },
+  "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
-    "@firebase/util": "^0.3.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
-    "grpc": "^1.24.4",
     "html-webpack-plugin": "^3.2.0",
-    "ini": "^1.3.6",
-    "kind-of": "^6.0.3",
-    "minimist": "^1.2.3",
-    "node-fetch": "^2.6.1",
-    "node-forge": "^0.10.0",
     "raw-loader": "^3.1.0",
-    "serialize-javascript": ">=3.1.0",
-    "sockjs": "^0.3.20",
-    "ssri": "^7.1.1",
     "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
-    "yargs-parser": "^13.1.2"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "firebase": "^7.5.1",
-    "phaser": "^3.20.1"
+    "phaser": "^3.50.0"
   }
 }
