--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser3-project-template",
+  "name": "afknights",
   "version": "1.1.2",
-  "description": "A Phaser 3 Project Template",
+  "description": "A Phaser 3 Project",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
