--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-# System and IDE files
-Thumbs.db
-.DS_Store
-.idea
-*.suo
-*.sublime-project
-*.sublime-workspace
+node_modules
 
-# Vendors
-node_modules/
-
-# Build
-dist/
-/npm-debug.log
