--- a/package.json
+++ b/package.json
@@ -4,47 +4,27 @@
   "description": "A Phaser 3 RPG",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --display-modules",
-    "buildlog": "webpack --json --profile > webpack.build-log.json",
-    "buildsprite": "webpack --config webpack.config-sprite.js --display-modules",
-    "buildspritelog": "webpack --config webpack.config-sprite.js --json --profile > webpack.build-sprite-log.json",
-    "buildboth": "webpack --config webpack.config-both.js --display-modules",
-    "buildbothlog": "webpack --config webpack.config-both.js --json --profile > webpack.build-both-log.json",
-    "buildspritesmall": "webpack --config webpack.config-sprite-small-loader.js --display-modules",
-    "buildspritesmalllog": "webpack --config webpack.config-sprite-small-loader.js --json --profile > webpack.build-sprite-small-loader-log.json",
-    "buildfull": "webpack --config webpack.config-full.js --display-modules",
-    "buildfulllog": "webpack --config webpack.config-full.js --json --profile > webpack.build-full-log.json",
-    "buildcore": "webpack --config webpack.config-core.js --display-modules",
-    "buildcorelog": "webpack --config webpack.config-core.js --json --profile > webpack.build-core-log.json",
-    "start": "webpack-dev-server --config webpack/base.js --open"
+    "build": "npx webpack --mode production",
+    "start": "npm run build && npx webpack-dev-server --port=8000 --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.15.4",
     "@firebase/util": "^0.3.4",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.2.0",
-    "grpc": "^1.24.4",
-    "html-webpack-plugin": "^3.2.0",
-    "ini": "^1.3.6",
-    "kind-of": "^6.0.3",
-    "minimist": "^1.2.3",
-    "node-fetch": "^2.6.1",
-    "node-forge": "^0.10.0",
+    "dotenv": "^10.0.0",
+    "file-loader": "^6.2.0",
     "raw-loader": "^3.1.0",
-    "serialize-javascript": ">=3.1.0",
-    "sockjs": "^0.3.20",
-    "ssri": "^7.1.1",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
-    "yargs-parser": "^13.1.2"
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "firebase": "^7.5.1",
+    "js-priority-queue": "^0.1.5",
     "phaser": "^3.20.1"
   }
 }
