--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,14 @@
 {
   "presets": [
-    "@babel/preset-env"
-  ],
-  "plugins": [
-    "@babel/transform-runtime"
+    ["@babel/env", {
+      "targets": {
+        "browsers": [
+          ">0.25%",
+          "not ie 11",
+          "not op_mini all"
+        ]
+      },
+      "modules": false
+    }]
   ]
 }
