--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "afknights",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "A Phaser 3 Project",
   "main": "src/index.js",
   "scripts": {
-    "build": "npx webpack --mode production",
-    "start": "npm run build && npx webpack-dev-server --port=8000 --mode development"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/runtime": "^7.15.4",
-    "babel-loader": "^8.0.6",
-    "dotenv": "^10.0.0",
-    "file-loader": "^6.2.0",
-    "raw-loader": "^3.1.0",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.7.2"
+    "build": "webpack --config webpack/prod.js ",
+    "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "dependencies": {
     "js-priority-queue": "^0.1.5",
     "phaser": "^3.50.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "dotenv": "^16.0.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^3.1.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   }
 }
