--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "A Phaser 3 Project",
   "main": "src/index.js",
+  "homepage": "afk-nights-opx3daeol-fabriciovo.vercel.app",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open"
@@ -16,6 +17,7 @@
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^4.5.4",
     "dotenv": "^16.0.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
