--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "js-priority-queue": "^0.1.5",
-    "phaser": "^3.55.2"
+    "phaser": "^3.60.0",
+    "phaser3-rex-plugins": "^1.60.5"
   }
 }
